Fix minor styling bug
overlapping copyright of mapbox

--- a/app/assets/stylesheets/areas.sass
+++ b/app/assets/stylesheets/areas.sass
@@ -97,7 +97,7 @@ $map-height: 900px
       padding: 25px 30px
       background-color: $bg-color
       box-shadow: 0 1px 2px rgba(0,0,0,0.10)
-      z-index: 1
+      z-index: 2
 
       .button-close
         position: absolute
